grey contacts working

--- a/ohmgear/templates/index.html
+++ b/ohmgear/templates/index.html
@@ -44,7 +44,7 @@
           </div>
               
           <div class="field-wrap">
-            <input type="hidden" value ="1" name="status"/>
+            <input type="hidden" value ="1" name="from_web"/>
           </div>
           <div class="field-wrap">
             <input type="hidden" value ="{{ cid }}" name="cid"/>
