user view-from_web

--- a/apps/sendrequest/templates/index.html
+++ b/apps/sendrequest/templates/index.html
@@ -18,9 +18,9 @@
       
       <div class="tab-content">
         <div id="signup">   
-          <h1>Sign Up for Free</h1>
+          <h1>Sign Up for Freeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</h1>
           
-          <form action="http://localhost:8000/api/users/" method="post">
+          <form action="http://localhost:8000/api/users/?from_web=1" method="post">
               
           
           <div class="top-row">
