--- a/apps/sendrequest/templates/sendrequest/index.html
+++ b/apps/sendrequest/templates/sendrequest/index.html
@@ -13,14 +13,14 @@
     <div class="form">
       
       <ul class="tab-group">
-        <li class="tab active"><a href="#signup">Sign Up</a></li>
+        <li class="tab active"><a href="#signup">Sign UpP</a></li>
       </ul>
       
       <div class="tab-content">
         <div id="signup">   
           <h1>Sign Up for Free</h1>
           
-          <form action="http://localhost:8000/api/users/" method="post">
+          <form action="http://localhost:8000/api/users/?from_web=1" method="post">
               
           
           <div class="top-row">
