--- a/apps/sendrequest/templates/sendrequest/index.html
+++ b/apps/sendrequest/templates/sendrequest/index.html
@@ -20,7 +20,7 @@
         <div id="signup">   
           <h1>Sign Up for Free</h1>
           
-          <form action="{{ request.get_host }}/api/users/?from_web=1" method="post">
+          <form action="{{ domain_name }}/api/users/?from_web=1" method="post">
               
           
           <div class="top-row">
